--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   ],
   "devDependencies": {
     "grunt": "0.4.x",
+    "grunt-banner": "0.5.0",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-uglify": "0.7.0",
     "grunt-contrib-watch": "0.6.x",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-uglify": "^0.7.0",
     "grunt-typescript": "0.4.x"
   },
   "engines": {
