--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "blanket": "^1.1.7",
     "chai": "^3.2.0",
+    "typescript": "1.3.0",
     "grunt": "0.4.x",
     "grunt-banner": "0.5.0",
     "grunt-contrib-clean": "0.6.0",
@@ -29,8 +30,8 @@
     "grunt-contrib-watch": "0.6.x",
     "grunt-typescript": "0.4.x",
     "mocha": "^2.2.5",
-    "mocha-phantomjs": "^3.6.0",
-    "phantomjs": "^1.9.7-15"
+    "phantomjs": "1.9.7-15",
+    "mocha-phantomjs": "^3.6.0"
   },
   "engines": {
     "node": "0.10.33"
