--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "QuartzStorage",
+  "name": "quartz-storage",
   "author": "Gembly",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Cross browser/platform safe localStorage implementation",
   "contributors": [
     {
@@ -24,7 +24,6 @@
     "chai": "^3.2.0",
     "typescript": "1.3.0",
     "grunt": "0.4.x",
-    "grunt-banner": "0.5.0",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-uglify": "0.7.0",
     "grunt-contrib-watch": "0.6.x",
