--- a/package.json
+++ b/package.json
@@ -20,23 +20,28 @@
     }
   ],
   "devDependencies": {
-    "blanket": "^1.1.7",
-    "chai": "^3.2.0",
-    "typescript": "1.3.0",
     "grunt": "0.4.x",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-uglify": "0.7.0",
     "grunt-contrib-watch": "0.6.x",
     "grunt-typescript": "0.4.x",
-    "mocha": "^2.2.5",
-    "phantomjs": "1.9.7-15",
-    "mocha-phantomjs": "^3.6.0"
+    "karma": "^0.13.15",
+    "karma-chai": "^0.1.0",
+    "karma-coverage": "^0.5.3",
+    "karma-mocha": "^0.2.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-teamcity-reporter": "^0.2.1",
+    "mocha": "^2.3.4",
+    "chai": "^3.4.1",
+    "phantomjs": "^1.9.19",
+    "typescript": "1.3.0"
   },
   "engines": {
     "node": "2.5.0"
   },
   "scripts": {
-    "test": "./node_modules/mocha-phantomjs/bin/mocha-phantomjs ./tests/index.html"
+    "test": "./node_modules/karma/bin/karma start ./tests/config.js --single-run",
+    "test-teamcity": "./node_modules/karma/bin/karma start ./tests/config.js --single-run --reporters teamcity"
   },
   "publishConfig": {
     "registry": "http://og-npm.ds.orangegames.com/"
