--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mocha": "^2.3.4",
     "chai": "^3.4.1",
     "phantomjs": "^1.9.19",
-    "typescript": "1.3.0"
+    "typescript": "1.7.x",
+    "grunt-typedoc": "^0.2.3"
   },
   "engines": {
     "node": "2.5.0"
